---
title: Data Model — swarm-reasoning (PostgreSQL + Redis Streams)
---
erDiagram

  %% ============================================================
  %% PostgreSQL: SESSION
  %% User-facing processing context. Ephemeral (3-day TTL).
  %% ============================================================

  SESSION {
    uuid session_id PK "UUID v4, immutable after creation"
    string status "active|frozen|expired"
    string snapshot_url "S3 path to static HTML snapshot (null until frozen)"
    string created_at "ISO 8601 UTC"
    string frozen_at "ISO 8601 UTC (null until frozen)"
    string expires_at "ISO 8601 UTC (frozen_at + 3 days)"
  }

  %% ============================================================
  %% PostgreSQL: CLAIM
  %% The natural-language assertion under investigation.
  %% Immutable after creation.
  %% ============================================================

  CLAIM {
    uuid claim_id PK "UUID v4"
    uuid session_id FK "References SESSION.session_id"
    string claim_text "Raw submitted claim text, max 2000 chars"
    string claim_slug "URL-safe slug, e.g. biden-vaccine-mandate"
    string source_url "Origin article URL (optional)"
    string source_date "ISO 8601 date (optional)"
    string domain "HEALTHCARE|ECONOMICS|POLICY|SCIENCE|ELECTION|CRIME|OTHER"
    string submitted_at "ISO 8601 UTC"
    string normalized_text "Normalized form from claim-detector agent"
    number check_worthy_score "0.0-1.0 from claim-detector agent"
  }

  %% ============================================================
  %% PostgreSQL: RUN
  %% A single execution of the agent pipeline.
  %% Implemented as a Temporal workflow.
  %% ============================================================

  RUN {
    string run_id PK "Format: {claim_slug}-run-{seq}"
    uuid session_id FK "References SESSION.session_id"
    string temporal_workflow_id "Temporal workflow execution ID"
    string status "pending|ingesting|analyzing|synthesizing|completed|cancelled|failed"
    string created_at "ISO 8601 UTC"
    string completed_at "ISO 8601 UTC (null until completed)"
    number expected_agent_count "How many agents must emit terminal status (11)"
    number completed_agent_count "How many agents have sent STOP"
  }

  %% ============================================================
  %% PostgreSQL: VERDICT
  %% Final output of a run. Immutable once finalized.
  %% ============================================================

  VERDICT {
    uuid verdict_id PK "UUID v4"
    string run_id FK "References RUN.run_id"
    number factuality_score "0.0-1.0"
    string rating_label "true|mostly-true|half-true|mostly-false|false|pants-on-fire"
    string narrative "Human-readable explanation, max 1000 chars"
    number signal_count "Number of F-status observations used in synthesis"
    string finalized_at "ISO 8601 UTC"
  }

  %% ============================================================
  %% PostgreSQL: CITATION
  %% A source URL referenced in a verdict, with validation metadata.
  %% ============================================================

  CITATION {
    uuid citation_id PK "UUID v4"
    uuid verdict_id FK "References VERDICT.verdict_id"
    string source_url "The cited URL"
    string source_name "Human-readable source name (e.g. PolitiFact, CDC)"
    string agent "Agent that discovered this source"
    string observation_code "Observation code that carries the URL"
    string validation_status "live|dead|redirect|soft-404|timeout|not-validated"
    number convergence_count "How many agents cited this same source"
  }

  %% ============================================================
  %% Redis Streams: STREAM_ENTRY
  %% Append-only observation log. Each entry is a StreamMessage.
  %% Entry ID is auto-generated by Redis (timestamp-seq).
  %% ============================================================

  STREAM_ENTRY {
    string entry_id PK "Redis auto-ID, e.g. 1712404801000-0"
    string stream_key "reasoning:{runId}:{agent}"
    string type "START|OBS|STOP"
    string run_id FK "References RUN.run_id"
    string agent FK "References AGENT.agent_name"
    string payload "JSON — see observation-schema-spec.md"
  }

  %% ============================================================
  %% Redis Streams: OBSERVATION (within OBS stream entries)
  %% The primary data-carrying structure. Append-only, immutable.
  %% ============================================================

  OBSERVATION {
    string run_id FK "References RUN.run_id"
    number seq PK "Sequential integer 1..N, unique within agent stream"
    string code FK "References OBS_CODE.code"
    string value "Typed observation value"
    string value_type "ST|NM|CWE|TX"
    string units "Unit string or null"
    string reference_range "low-high or null"
    string status "P|F|C|X — epistemic state"
    string timestamp "ISO 8601 UTC"
    string agent FK "References AGENT.agent_name"
    string method "Tool name or null"
    string note "Free text annotation, max 512 chars, or null"
  }

  %% ============================================================
  %% Redis Streams: PROGRESS_EVENT
  %% User-friendly status messages, relayed to frontend via SSE.
  %% Stored in progress:{runId} stream.
  %% ============================================================

  PROGRESS_EVENT {
    string entry_id PK "Redis auto-ID"
    string stream_key "progress:{runId}"
    string run_id FK "References RUN.run_id"
    string agent "Agent that produced this event"
    string phase "ingestion|fanout|synthesis|finalization"
    string type "agent-started|agent-progress|agent-completed|verdict-ready|session-frozen"
    string message "User-friendly text"
    string timestamp "ISO 8601 UTC"
  }

  %% ============================================================
  %% Reference Data: OBS_CODE
  %% Registry of valid observation codes. Read-only at runtime.
  %% Source of truth: obx-code-registry.json (36 codes)
  %% ============================================================

  OBS_CODE {
    string code PK "e.g. CONFIDENCE_SCORE"
    string display "Human-readable name"
    string owner_agent "Agent(s) authorized to write this code"
    string value_type "ST|NM|CWE|TX"
    string units "Expected unit string or null"
    string reference_range "Expected range or null"
    string description "Documentation string"
  }

  %% ============================================================
  %% Reference Data: AGENT
  %% Registry of agent types participating in runs.
  %% Each agent runs as a Temporal worker in the Agent Service.
  %% ============================================================

  AGENT {
    string agent_name PK "e.g. coverage-left"
    string phase "ingestion|fanout|synthesis"
    string temporal_task_queue "Temporal task queue for this agent type"
    string stream_prefix "Redis Stream key prefix: reasoning:{runId}:{agent_name}"
    string owned_codes "Pipe-delimited OBS codes this agent may write"
  }

  %% ============================================================
  %% Redis Consumer Group: orchestrator
  %% Single consumer group for the orchestrator workflow to read
  %% all agent streams. Tracks last-delivered entry per stream.
  %% ============================================================

  CONSUMER_GROUP {
    string group_name PK "orchestrator"
    string consumer_name "orchestrator-1"
    string stream_key FK "References STREAM_ENTRY.stream_key"
    string last_delivered_id "Last entry ID delivered to this group"
    number pending_count "Entries delivered but not yet ACKed"
  }

  %% ============================================================
  %% Relationships
  %% ============================================================

  SESSION ||--|| CLAIM : "contains"
  SESSION ||--|| RUN : "owns"
  RUN ||--o| VERDICT : "produces"
  VERDICT ||--o{ CITATION : "includes"

  RUN ||--o{ STREAM_ENTRY : "contains"
  RUN ||--o{ PROGRESS_EVENT : "generates"
  STREAM_ENTRY ||--o| OBSERVATION : "carries (when type=OBS)"
  OBSERVATION }o--|| OBS_CODE : "typed by"
  OBSERVATION }o--|| AGENT : "written by"
  AGENT ||--o{ STREAM_ENTRY : "publishes to"
  CONSUMER_GROUP }o--o{ STREAM_ENTRY : "tracks delivery of"
